--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>√лавна€ страница</title>
+	<title>Main Page</title>
+    <meta charset="UTF-8">
 </head>
 <body>
     <header>
@@ -42,7 +43,7 @@
                 <div id="second-featured-post">
                     <span>Adventure</span>
                     <span>From Top Down</span>
-                    <p>Once a year, go someplace youТve never been before.</p>
+                    <p>Once a year, go someplace youve never been before.</p>
                     <img src="William-Wong.jpg" alt="">
                     <span>William Wong</span>
                     <span>September 25, 2015</span>      
@@ -61,7 +62,7 @@
                 <div id="second-recent-post">
                     <img src="IMAGEsecond-rec.png" alt="">
                     <span>Sunny Side Up</span>
-                    <p>No place is ever as bad as they tell you itТs going to be.</p>
+                    <p>No place is ever as bad as they tell you its going to be.</p>
                     <img src="Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
