--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <head>
 	<title>Main Page</title>
     <meta charset="UTF-8">
+    <link href="Styles/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <span>Escape.</span>
-        <nav>
+        <span class="header_title">Escape.</span>
+        <nav class="header_nav">
             <a href="">HOME</a>
             <a href="">CATEGORIES</a>
             <a href="">ABOUT</a>
             <a href="">CONTACT</a>
         </nav>
         <div>
-            <h1>Let`s do it together.</h1>
-            <p>We travel tghe world in search of stories. Come along for the ride.</p>
-            <button>View latest post</button>
+            <h1 class="header_h1">Let`s do it together.</h1>
+            <p class="header_p">We travel tghe world in search of stories. Come along for the ride.</p>
+            <button class="header_button">View latest post</button>
         </div>
     </header>
-    <section>
-        <div id="navigation">
+    <main>
+        <div class="main_navigation">
             <nav>
                 <a href="">Nature</a>
                 <a href="">Photography</a>
@@ -31,80 +32,80 @@
             </nav>
         </div>
         <div>
-            <div id="featured-posts">
+            <div class="main_featured-posts">
                 <h2>Featured Posts</h2>
-                <div id="first-featured-post">
+                <div class="main_first-featured-post">
                     <span>The Road Ahead</span>
                     <p>The road ahead might be paved - it might not be.</p>
-                    <img src="Mat-Vogels.jpg" alt="">
+                    <img src="Images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>September 25, 2015</span>
                 </div>
-                <div id="second-featured-post">
+                <div class="main_second-featured-post">
                     <span>Adventure</span>
                     <span>From Top Down</span>
                     <p>Once a year, go someplace youve never been before.</p>
-                    <img src="William-Wong.jpg" alt="">
+                    <img src="Images/William-Wong.jpg" alt="">
                     <span>William Wong</span>
                     <span>September 25, 2015</span>      
                 </div>           
             </div>
-            <div id="most-recent-posts">
+            <div class="main_most-recent-posts">
                 <h2>Most Recent</h2>
-                <div id="first-recent-post">
-                    <img src="first-recent.jpg" alt="">
+                <div class="main_first-recent-post">
+                    <img src="Images/first-recent.jpg" alt="">
                     <span>Still Standing Tall</span>
                     <p>Life begins at the end of your comfort zone.</p>
-                    <img src="William-Wong.jpg" alt="">
+                    <img src="Images/William-Wong.jpg" alt="">
                     <span>William Wong</span>
                     <span>9/25/2015</span>      
                 </div>
-                <div id="second-recent-post">
-                    <img src="IMAGEsecond-rec.png" alt="">
+                <div class="main_second-recent-post">
+                    <img src="Images/IMAGEsecond-rec.png" alt="">
                     <span>Sunny Side Up</span>
                     <p>No place is ever as bad as they tell you its going to be.</p>
-                    <img src="Mat-Vogels.jpg" alt="">
+                    <img src="Images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
                 </div>
-                <div id="third-recent-post">
-                    <img src="IMAGEthird-rec.png" alt="">
+                <div class="main_third-recent-post">
+                    <img src="Images/IMAGEthird-rec.png" alt="">
                     <span>Water Falls</span>
                     <p>We travel not to escape life, but for life not to escape us.</p>
-                    <img src="Mat-Vogels.jpg" alt="">
+                    <img src="Images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
                 </div>
-                <div id="fourth-recent-post">
-                    <img src="IMAGEfourth-rec.png" alt="">                 
+                <div class="main_fourth-recent-post">
+                    <img src="Images/IMAGEfourth-rec.png" alt="">                 
                     <span>Through the Mist</span>
                     <p>Travel makes you see what a tiny place you occupy in the world.</p>
-                    <img src="William-Wong.jpg" alt="">
+                    <img src="Images/William-Wong.jpg" alt="">
                     <span>William Wong</span>
                     <span>9/25/2015</span>      
                 </div>
-                <div id="fifth-recent-post">
-                    <img src="IMAGEfifth-rec.png" alt="">      
+                <div class="main_fifth-recent-post">
+                    <img src="Images/IMAGEfifth-rec.png" alt="">      
                     <span>Awaken Early</span>
                     <p>Not all those who wander are lost.</p>
-                    <img src="Mat-Vogels.jpg" alt="">
+                    <img src="Images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
                 </div>
-                <div id="sixth-recent-post">
-                    <img src="IMAGEsixth-rec.png" alt="">
+                <div class="sixth-recent-post">
+                    <img src="Images/IMAGEsixth-rec.png" alt="">
                     <span>Try it Always</span>
                     <p>The world is a book, and those who do not travel read only one page.</p>
-                    <img src="Mat-Vogels.jpg" alt="">
+                    <img src="Images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
                 </div>
             </div>
         </div>
-    </section>
+    </main>
     <footer>
         <span>Escape.</span>
-        <nav>
+        <nav class="">
             <a href="">HOME</a>
             <a href="">CATEGORIES</a>
             <a href="">ABOUT</a>
