--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Main Page</title>
     <meta charset="UTF-8">
-    <link href="Styles/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -16,7 +16,7 @@
         </nav>
         <div>
             <h1 class="header_h1">Let`s do it together.</h1>
-            <p class="header_p">We travel tghe world in search of stories. Come along for the ride.</p>
+            <p class="header_p">We travel the world in search of stories. Come along for the ride.</p>
             <button class="header_button">View latest post</button>
         </div>
     </header>
@@ -37,7 +37,7 @@
                 <div class="main_first-featured-post">
                     <span>The Road Ahead</span>
                     <p>The road ahead might be paved - it might not be.</p>
-                    <img src="Images/Mat-Vogels.jpg" alt="">
+                    <img src="images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>September 25, 2015</span>
                 </div>
@@ -45,7 +45,7 @@
                     <span>Adventure</span>
                     <span>From Top Down</span>
                     <p>Once a year, go someplace youve never been before.</p>
-                    <img src="Images/William-Wong.jpg" alt="">
+                    <img src="images/William-Wong.jpg" alt="">
                     <span>William Wong</span>
                     <span>September 25, 2015</span>      
                 </div>           
@@ -53,50 +53,50 @@
             <div class="main_most-recent-posts">
                 <h2>Most Recent</h2>
                 <div class="main_first-recent-post">
-                    <img src="Images/first-recent.jpg" alt="">
+                    <img src="images/first-recent.jpg" alt="">
                     <span>Still Standing Tall</span>
                     <p>Life begins at the end of your comfort zone.</p>
-                    <img src="Images/William-Wong.jpg" alt="">
+                    <img src="images/William-Wong.jpg" alt="">
                     <span>William Wong</span>
                     <span>9/25/2015</span>      
                 </div>
                 <div class="main_second-recent-post">
-                    <img src="Images/IMAGEsecond-rec.png" alt="">
+                    <img src="images/IMAGEsecond-rec.png" alt="">
                     <span>Sunny Side Up</span>
                     <p>No place is ever as bad as they tell you its going to be.</p>
-                    <img src="Images/Mat-Vogels.jpg" alt="">
+                    <img src="images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
                 </div>
                 <div class="main_third-recent-post">
-                    <img src="Images/IMAGEthird-rec.png" alt="">
+                    <img src="images/IMAGEthird-rec.png" alt="">
                     <span>Water Falls</span>
                     <p>We travel not to escape life, but for life not to escape us.</p>
-                    <img src="Images/Mat-Vogels.jpg" alt="">
+                    <img src="images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
                 </div>
                 <div class="main_fourth-recent-post">
-                    <img src="Images/IMAGEfourth-rec.png" alt="">                 
+                    <img src="images/IMAGEfourth-rec.png" alt="">                 
                     <span>Through the Mist</span>
                     <p>Travel makes you see what a tiny place you occupy in the world.</p>
-                    <img src="Images/William-Wong.jpg" alt="">
+                    <img src="images/William-Wong.jpg" alt="">
                     <span>William Wong</span>
                     <span>9/25/2015</span>      
                 </div>
                 <div class="main_fifth-recent-post">
-                    <img src="Images/IMAGEfifth-rec.png" alt="">      
+                    <img src="images/IMAGEfifth-rec.png" alt="">      
                     <span>Awaken Early</span>
                     <p>Not all those who wander are lost.</p>
-                    <img src="Images/Mat-Vogels.jpg" alt="">
+                    <img src="images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
                 </div>
                 <div class="sixth-recent-post">
-                    <img src="Images/IMAGEsixth-rec.png" alt="">
+                    <img src="images/IMAGEsixth-rec.png" alt="">
                     <span>Try it Always</span>
                     <p>The world is a book, and those who do not travel read only one page.</p>
-                    <img src="Images/Mat-Vogels.jpg" alt="">
+                    <img src="images/Mat-Vogels.jpg" alt="">
                     <span>Mat Vogels</span>
                     <span>9/25/2015</span>      
                 </div>
