--- a/index.html
+++ b/index.html
@@ -6,112 +6,140 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <span class="header_title">Escape.</span>
-        <nav class="header_nav">
-            <a href="">HOME</a>
-            <a href="">CATEGORIES</a>
-            <a href="">ABOUT</a>
-            <a href="">CONTACT</a>
+    <header class="header">
+        <span class="header__title">Escape.</span>
+        <nav class="header__nav">
+            <a href="" class="header__nav__link">HOME</a>
+            <a href="" class="header__nav__link">CATEGORIES</a>
+            <a href="" class="header__nav__link">ABOUT</a>
+            <a href="" class="header__nav__link">CONTACT</a>
         </nav>
         <div>
-            <h1 class="header_h1">Let`s do it together.</h1>
-            <p class="header_p">We travel the world in search of stories. Come along for the ride.</p>
-            <button class="header_button">View latest post</button>
+            <h1 class="header__h1">Let`s do it together.</h1>
+            <p class="header__p">We travel the world in search of stories. Come along for the ride.</p>
+            <button class="header__button">View latest post</button>
         </div>
     </header>
-    <main>
-        <div class="main_nav">
-            <nav>
-                <a href="">Nature</a>
-                <a href="">Photography</a>
-                <a href="">Relaxation</a>
-                <a href="">Vacation</a>
-                <a href="">Travel</a>
-                <a href="">Adventure</a>
-            </nav>
-        </div>
-        <div>
+    <nav class="navigation">
+        <a href="" class="navigation__link">Nature</a>
+        <a href="" class="navigation__link">Photography</a>
+        <a href="" class="navigation__link">Relaxation</a>
+        <a href="" class="navigation__link">Vacation</a>
+        <a href="" class="navigation__link">Travel</a>
+        <a href="" class="navigation__link">Adventure</a>
+    </nav>
+    <main class="main">
+        <div class="main__featured-posts">
+            <h2 class="main__featured-posts__title">Featured Posts</h2>
             <div>
-                <h2 class="main_featured-posts">Featured Posts</h2>
-                <div>
-                    <div class="main_first-featured-post">
-                        <span class="main_first-featured-post_title">The Road Ahead</span>
-                        <p class="main_first-featured-post_text">The road ahead might be paved - it might not be.</p>
-                        <img class="main_first-featured-post_author-image" src="images/Mat-Vogels.jpg" alt="">
-                        <span class="main_first-featured-post_author">Mat Vogels</span>
-                        <span class="main_first-featured-post_publish-date">September 25, 2015</span>
+                <div class="main__featured-posts__first-featured-post">
+                    <span class="main__featured-posts__first-featured-post__title">The Road Ahead</span>
+                    <p class="main__featured-posts__first-featured-post__text">The road ahead might be paved - it might not be.</p>
+                    <div>
+                        <img class="main__featured-posts__first-featured-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <span class="main__featured-posts__first-featured-post__author">Mat Vogels</span>
+                        <span class="main__featured-posts__first-featured-post__publish-date">September 25, 2015</span>
                     </div>
-                    <div class="main_second-featured-post">
-                        <span class="">Adventure</span>
-                        <span class="main_second-featured-post_text">From Top Down</span>
-                        <p class="main_second-featured-post_text">Once a year, go someplace youve never been before.</p>
+                </div>
+                <div class="main__second-featured-post">
+                    <div class="main__second-featured-post__adventure-mark">
+                        <span>Adventure</span>
+                    </div>
+                    <span class="main__second-featured-post__title">From Top Down</span>
+                    <p class="main__second-featured-post__text">Once a year, go someplace youve never been before.</p>
+                    <div>
                         <img src="images/William-Wong.jpg" alt="">
-                        <span class="main_second-featured-post_author">William Wong</span>
-                        <span class="main_second-featured-post_publish-date">September 25, 2015</span>      
-                    </div>       
-                </div>    
-            </div>
-            <div class="main_most-recent-posts">
-                <h2>Most Recent</h2>
-                <div class="main_first-recent-post">
+                        <span class="main__second-featured-post__author">William Wong</span>
+                        <span class="main__second-featured-post__publish-date">September 25, 2015</span>     
+                    </div>
+                </div>       
+            </div>    
+        </div>
+        <div class="main__most-recent-posts">
+            <h2 class="main__most-recent-posts__title">Most Recent</h2>
+            <div>
+                <div class="main__most-recent-posts__first-recent-post">
                     <img src="images/first-recent.jpg" alt="">
-                    <span>Still Standing Tall</span>
-                    <p>Life begins at the end of your comfort zone.</p>
-                    <img src="images/William-Wong.jpg" alt="">
-                    <span>William Wong</span>
-                    <span>9/25/2015</span>      
+                    <div>
+                        <span class="main__most-recent-posts__first-recent-post__title">Still Standing Tall</span>
+                        <p class="main__most-recent-posts__first-recent-post__text">Life begins at the end of your comfort zone.</p>
+                    </div>
+                    <div>
+                        <img src="images/William-Wong.jpg" alt="">
+                        <span class="main__most-recent-posts__first-recent-post__author">William Wong</span>
+                        <span class="main__most-recent-posts__first-recent-post__publish-date">9/25/2015</span>      
+                    </div>
                 </div>
-                <div class="main_second-recent-post">
+                <div class="main__second-recent-post">
                     <img src="images/IMAGEsecond-rec.png" alt="">
-                    <span>Sunny Side Up</span>
-                    <p>No place is ever as bad as they tell you its going to be.</p>
-                    <img src="images/Mat-Vogels.jpg" alt="">
-                    <span>Mat Vogels</span>
-                    <span>9/25/2015</span>      
+                    <div>
+                        <span class="main__most-recent-posts__second-recent-post__title">Sunny Side Up</span>
+                        <p class="main__most-recent-posts__second-recent-post__text">No place is ever as bad as they tell you its going to be.</p>
+                    </div>
+                    <div>
+                        <img src="images/Mat-Vogels.jpg" alt="">
+                        <span class="main__most-recent-posts__second-recent-post__author">Mat Vogels</span>
+                        <span class="main__most-recent-posts__second-recent-post__publish-date">9/25/2015</span>      
+                    </div>                    
                 </div>
-                <div class="main_third-recent-post">
+                <div class="main__most-recent-posts__third-recent-post">
                     <img src="images/IMAGEthird-rec.png" alt="">
-                    <span>Water Falls</span>
-                    <p>We travel not to escape life, but for life not to escape us.</p>
-                    <img src="images/Mat-Vogels.jpg" alt="">
-                    <span>Mat Vogels</span>
-                    <span>9/25/2015</span>      
+                    <div>
+                        <span class="main__most-recent-posts__third-recent-post__title">Water Falls</span>
+                        <p class="main__most-recent-posts__third-recent-post__text">We travel not to escape life, but for life not to escape us.</p>
+                    </div>
+                    <div>
+                        <img src="images/Mat-Vogels.jpg" alt="">
+                        <span class="main__most-recent-posts__third-recent-post__author">Mat Vogels</span>
+                        <span class="main__most-recent-posts__third-recent-post__publish-date">9/25/2015</span>      
+                    </div>                    
                 </div>
-                <div class="main_fourth-recent-post">
-                    <img src="images/IMAGEfourth-rec.png" alt="">                 
-                    <span>Through the Mist</span>
-                    <p>Travel makes you see what a tiny place you occupy in the world.</p>
-                    <img src="images/William-Wong.jpg" alt="">
-                    <span>William Wong</span>
-                    <span>9/25/2015</span>      
+                <div class="main__most-recent-posts__fourth-recent-post">
+                    <img src="images/IMAGEfourth-rec.png" alt="">        
+                    <div>
+                        <span class="main__most-recent-posts__fourth-recent-post__title">Through the Mist</span>
+                        <p class="main__most-recent-posts__fourth-recent-post__text">Travel makes you see what a tiny place you occupy in the world.</p>
+                    </div>
+                    <div>
+                        <img src="images/William-Wong.jpg" alt="">
+                        <span class="main__most-recent-posts__fourth-recent-post__author">William Wong</span>
+                        <span class="main__most-recent-posts__fourth-recent-post__publish-date">9/25/2015</span>      
+                    </div>         
                 </div>
-                <div class="main_fifth-recent-post">
-                    <img src="images/IMAGEfifth-rec.png" alt="">      
-                    <span>Awaken Early</span>
-                    <p>Not all those who wander are lost.</p>
-                    <img src="images/Mat-Vogels.jpg" alt="">
-                    <span>Mat Vogels</span>
-                    <span>9/25/2015</span>      
+                <div class="main__most-recent-posts__fifth-recent-post">
+                    <img src="images/IMAGEfifth-rec.png" alt="">
+                    <div>
+                        <span class="main__most-recent-posts__fifth-recent-post__title">Awaken Early</span>
+                        <p class="main__most-recent-posts__fifth-recent-post__text">Not all those who wander are lost.</p>
+                    </div>
+                    <div>
+                        <img src="images/Mat-Vogels.jpg" alt="">
+                        <span class="main__most-recent-posts__fifth-recent-post__author">Mat Vogels</span>
+                        <span class="main__most-recent-posts__fifth-recent-post__publish-date">9/25/2015</span> 
+                    </div>
                 </div>
-                <div class="sixth-recent-post">
+                <div class="main__most-recent-posts__sixth-recent-post">
                     <img src="images/IMAGEsixth-rec.png" alt="">
-                    <span>Try it Always</span>
-                    <p>The world is a book, and those who do not travel read only one page.</p>
-                    <img src="images/Mat-Vogels.jpg" alt="">
-                    <span>Mat Vogels</span>
-                    <span>9/25/2015</span>      
+                    <div>
+                        <span class="main__most-recent-posts__sixth-recent-post__title">Try it Always</span>
+                        <p class="main__most-recent-posts__sixth-recent-post__text">The world is a book, and those who do not travel read only one page.</p>
+                    </div>
+                    <div>
+                        <img src="images/Mat-Vogels.jpg" alt="">
+                        <span class="main__most-recent-posts__sixth-recent-post__author">Mat Vogels</span>
+                        <span class="main__most-recent-posts__sixth-recent-post__publish-date">9/25/2015</span>   
+                    </div>                 
                 </div>
             </div>
         </div>
     </main>
-    <footer>
-        <span>Escape.</span>
-        <nav class="">
-            <a href="">HOME</a>
-            <a href="">CATEGORIES</a>
-            <a href="">ABOUT</a>
-            <a href="">CONTACT</a>
+    <footer class="footer">
+        <span class="footer__title">Escape.</span>
+        <nav class="footer__links">
+            <a class="footer__links__link" href="">HOME</a>
+            <a class="footer__links__link" href="">CATEGORIES</a>
+            <a class="footer__links__link" href="">ABOUT</a>
+            <a class="footer__links__link" href="">CONTACT</a>
         </nav>
     </footer>
 </body>
