--- a/the-road-ahead.html
+++ b/the-road-ahead.html
@@ -9,10 +9,10 @@
     <header class="header">
         <span class="header__title">Escape.</span>
         <nav class="header__nav"> 
-            <a class="header__nav__link" href="">HOME</a>
-            <a class="header__nav__link" href="">CATEGORIES</a>
-            <a class="header__nav__link" href="">ABOUT</a>
-            <a class="header__nav__link" href="">CONTACT</a>
+            <a class="header__nav header__nav_link" href="">HOME</a>
+            <a class="header__nav header__nav_link" href="">CATEGORIES</a>
+            <a class="header__nav header__nav_link" href="">ABOUT</a>
+            <a class="header__nav header__nav_link" href="">CONTACT</a>
         </nav>
     </header>
     <article class="article">
@@ -27,10 +27,10 @@
     <footer class="footer">
         <span class="footer__title">Escape.</span>
         <nav class="footer__links">
-            <a class="footer__links__link" href="">HOME</a>
-            <a class="footer__links__link" href="">CATEGORIES</a>
-            <a class="footer__links__link" href="">ABOUT</a>
-            <a class="footer__links__link" href="">CONTACT</a>
+            <a class="footer__links footer__links_link" href="">HOME</a>
+            <a class="footer__links footer__links_link" href="">CATEGORIES</a>
+            <a class="footer__links footer__links_link" href="">ABOUT</a>
+            <a class="footer__links footer__links_link" href="">CONTACT</a>
         </nav>
     </footer>
 </body>
