--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header class="header">
         <span class="header__title">Escape.</span>
         <nav class="header__nav">
-            <a href="" class="header__nav header__nav_link">HOME</a>
-            <a href="" class="header__nav header__nav_link">CATEGORIES</a>
-            <a href="" class="header__nav header__nav_link">ABOUT</a>
-            <a href="" class="header__nav header__nav_link">CONTACT</a>
+            <a href="#" class="header__nav header__nav_link">HOME</a>
+            <a href="#" class="header__nav header__nav_link">CATEGORIES</a>
+            <a href="#" class="header__nav header__nav_link">ABOUT</a>
+            <a href="#" class="header__nav header__nav_link">CONTACT</a>
         </nav>
         <div class="header__content">
             <h1 class="header__h1">Let`s do it together.</h1>
@@ -21,12 +21,12 @@
         </div>
     </header>
     <nav class="navigation">
-        <a href="" class="navigation__link">Nature</a>
-        <a href="" class="navigation__link">Photography</a>
-        <a href="" class="navigation__link">Relaxation</a>
-        <a href="" class="navigation__link">Vacation</a>
-        <a href="" class="navigation__link">Travel</a>
-        <a href="" class="navigation__link">Adventure</a>
+        <a href="#" class="navigation__link">Nature</a>
+        <a href="#" class="navigation__link">Photography</a>
+        <a href="#" class="navigation__link">Relaxation</a>
+        <a href="#" class="navigation__link">Vacation</a>
+        <a href="#" class="navigation__link">Travel</a>
+        <a href="#" class="navigation__link">Adventure</a>
     </nav>
     <main class="main">
         <div class="main__featured-posts main__featured-posts_content">
@@ -136,10 +136,10 @@
     <footer class="footer">
         <span class="footer__title">Escape.</span>
         <nav class="footer__links">
-            <a class="footer__links footer__links_link" href="">HOME</a>
-            <a class="footer__links footer__links_link" href="">CATEGORIES</a>
-            <a class="footer__links footer__links_link" href="">ABOUT</a>
-            <a class="footer__links footer__links_link" href="">CONTACT</a>
+            <a class="footer__links footer__links_link" href="#">HOME</a>
+            <a class="footer__links footer__links_link" href="#">CATEGORIES</a>
+            <a class="footer__links footer__links_link" href="#">ABOUT</a>
+            <a class="footer__links footer__links_link" href="#">CONTACT</a>
         </nav>
     </footer>
 </body>
