--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <header class="header">
-        <span class="header__title">Escape.</span>
-        <nav class="header__nav">
-            <a href="#" class="header__nav header__nav_link">HOME</a>
-            <a href="#" class="header__nav header__nav_link">CATEGORIES</a>
-            <a href="#" class="header__nav header__nav_link">ABOUT</a>
-            <a href="#" class="header__nav header__nav_link">CONTACT</a>
+        <span class="title header__title">Escape.</span>
+        <nav class="nav header__nav">
+            <a href="#" class="nav__link">HOME</a>
+            <a href="#" class="nav__link">CATEGORIES</a>
+            <a href="#" class="nav__link">ABOUT</a>
+            <a href="#" class="nav__link">CONTACT</a>
         </nav>
         <div class="header__content">
             <h1 class="header__h1">Let`s do it together.</h1>
