--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <header class="header">
         <span class="title header__title">Escape.</span>
         <nav class="nav header__nav">
-            <a href="#" class="nav__link">HOME</a>
-            <a href="#" class="nav__link">CATEGORIES</a>
-            <a href="#" class="nav__link">ABOUT</a>
-            <a href="#" class="nav__link">CONTACT</a>
+            <a href="#" class="link nav__link">HOME</a>
+            <a href="#" class="link nav__link">CATEGORIES</a>
+            <a href="#" class="link nav__link">ABOUT</a>
+            <a href="#" class="link nav__link">CONTACT</a>
         </nav>
         <div class="header__content">
             <h1 class="header__h1">Let`s do it together.</h1>
