--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <header class="header">
-        <span class="title header__title">Escape.</span>
-        <nav class="nav header__nav">
-            <a href="#" class="link nav__link">HOME</a>
-            <a href="#" class="link nav__link">CATEGORIES</a>
-            <a href="#" class="link nav__link">ABOUT</a>
-            <a href="#" class="link nav__link">CONTACT</a>
+        <span class="header__title">Escape.</span>
+        <nav class="menu header__nav">
+            <a href="#" class="menu__link">HOME</a>
+            <a href="#" class="menu__link">CATEGORIES</a>
+            <a href="#" class="menu__link">ABOUT</a>
+            <a href="#" class="menu__link">CONTACT</a>
         </nav>
-        <div class="header__content">
-            <h1 class="header__h1">Let`s do it together.</h1>
-            <p class="header__p">We travel the world in search of stories. Come along for the ride.</p>
-            <button class="header__button">View latest post</button>
+        <div class="header-content header__content">
+            <h1 class="header-content__h1">Let`s do it together.</h1>
+            <p class="header-content__p">We travel the world in search of stories. Come along for the ride.</p>
+            <button class="header-content__button">View latest post</button>
         </div>
     </header>
     <nav class="navigation">
@@ -29,105 +29,105 @@
         <a href="#" class="navigation__link">Adventure</a>
     </nav>
     <main class="main">
-        <div class="main__featured-posts main__featured-posts_content">
-            <h2 class="main__featured-posts main__featured-posts_title">Featured Posts</h2>
+        <div class="featured-posts main__featured-posts">
+            <h2 class="featured-posts__title">Featured Posts</h2>
             <div>
-                <div class="main__first-featured-post main__first-featured-post_content">
-                    <span class="main__first-featured-post main__first-featured-post_title">The Road Ahead</span>
-                    <p class="main__first-featured-post main__first-featured-post_text">The road ahead might be paved - it might not be.</p>
+                <div class="first-featured-post featured-posts__first-featured-post">
+                    <span class="first-featured-post__title">The Road Ahead</span>
+                    <p class="first-featured-post__text">The road ahead might be paved - it might not be.</p>
                     <div>
-                        <img class="main__first-featured-post main__first-featured-post_author-image" src="images/Mat-Vogels.jpg" alt="">
-                        <span class="main__first-featured-post main__first-featured-post_author">Mat Vogels</span>
-                        <span class="main__first-featured-post main__first-featured-post_publish-date">September 25, 2015</span>
+                        <img class="first-featured-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <span class="first-featured-post__author">Mat Vogels</span>
+                        <span class="first-featured-post__publish-date">September 25, 2015</span>
                     </div>
                 </div>
-                <div class="main__second-featured-post main__second-featured-post_content">
-                    <div class="main__second-featured-post main__second-featured-post_adventure-mark">
+                <div class="second-featured-post featured-posts__second-featured-post">
+                    <div class="adventure-mark second-featured-post__adventure-mark">
                         <span>Adventure</span>
                     </div>
-                    <span class="main__second-featured-post main__second-featured-post_title">From Top Down</span>
-                    <p class="main__second-featured-post main__second-featured-post_text">Once a year, go someplace youve never been before.</p>
+                    <span class="second-featured-post__title">From Top Down</span>
+                    <p class="second-featured-post__text">Once a year, go someplace youve never been before.</p>
                     <div>
-                        <img src="images/William-Wong.jpg" alt="">
-                        <span class="main__second-featured-post main__second-featured-post_author">William Wong</span>
-                        <span class="main__second-featured-post main__second-featured-post_publish-date">September 25, 2015</span>     
+                        <img class="second-featured-post__author-image" src="images/William-Wong.jpg" alt="">
+                        <span class="second-featured-post__author">William Wong</span>
+                        <span class="second-featured-post__publish-date">September 25, 2015</span>     
                     </div>
                 </div>       
             </div>    
         </div>
-        <div class="main__most-recent-posts">
-            <h2 class="main__most-recent-posts main__most-recent-posts_title">Most Recent</h2>
+        <div class="most-recent-posts main__most-recent-posts">
+            <h2 class="most-recent-posts__title">Most Recent</h2>
             <div>
-                <div class="main__first-recent-post main__first-recent-post_content">
-                    <img src="images/first-recent.jpg" alt="">
+                <div class="first-recent-post main__first-recent-post">
+                    <img class="first-recent-post__image" src="images/first-recent.jpg" alt="">
                     <div>
-                        <span class="main__first-recent-post main__first-recent-post_title">Still Standing Tall</span>
-                        <p class="main__first-recent-post main__first-recent-post_text">Life begins at the end of your comfort zone.</p>
+                        <span class="first-recent-post__title">Still Standing Tall</span>
+                        <p class="first-recent-post__text">Life begins at the end of your comfort zone.</p>
                     </div>
                     <div>
-                        <img src="images/William-Wong.jpg" alt="">
-                        <span class="main__first-recent-post main__first-recent-post_author">William Wong</span>
-                        <span class="main__first-recent-post main__first-recent-post_publish-date">9/25/2015</span>      
+                        <img class="first-recent-post__author-image" src="images/William-Wong.jpg" alt="">
+                        <span class="first-recent-post__author">William Wong</span>
+                        <span class="first-recent-post__publish-date">9/25/2015</span>      
                     </div>
                 </div>
-                <div class="main__second-recent-post main__second-recent-post_content">
-                    <img src="images/IMAGEsecond-rec.png" alt="">
+                <div class="second-recent-post main__second-recent-post">
+                    <img class="second-recent-post__image" src="images/IMAGEsecond-rec.png" alt="">
                     <div>
-                        <span class="main__second-recent-post main__second-recent-post_title">Sunny Side Up</span>
-                        <p class="main__second-recent-post main__second-recent-post_text">No place is ever as bad as they tell you its going to be.</p>
+                        <span class="second-recent-post__title">Sunny Side Up</span>
+                        <p class="second-recent-post__text">No place is ever as bad as they tell you its going to be.</p>
                     </div>
                     <div>
-                        <img src="images/Mat-Vogels.jpg" alt="">
-                        <span class="main__second-recent-post main__second-recent-post_author">Mat Vogels</span>
-                        <span class="main__second-recent-post main__second-recent-post_publish-date">9/25/2015</span>      
+                        <img class="second-recent-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <span class="second-recent-post__author">Mat Vogels</span>
+                        <span class="second-recent-post__publish-date">9/25/2015</span>      
                     </div>                    
                 </div>
-                <div class="main__third-recent-post main__third-recent-post_content">
-                    <img src="images/IMAGEthird-rec.png" alt="">
+                <div class="third-recent-post main__third-recent-post">
+                    <img class="third-recent-post__image" src="images/IMAGEthird-rec.png" alt="">
                     <div>
-                        <span class="main__third-recent-post main__third-recent-post_title">Water Falls</span>
-                        <p class="main__third-recent-post main__third-recent-post_text">We travel not to escape life, but for life not to escape us.</p>
+                        <span class="third-recent-post__title">Water Falls</span>
+                        <p class="third-recent-post__text">We travel not to escape life, but for life not to escape us.</p>
                     </div>
                     <div>
-                        <img src="images/Mat-Vogels.jpg" alt="">
-                        <span class="main__third-recent-post main__third-recent-post_author">Mat Vogels</span>
-                        <span class="main__third-recent-post main__third-recent-post_publish-date">9/25/2015</span>      
+                        <img class="third-recent-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <span class="third-recent-post__author">Mat Vogels</span>
+                        <span class="third-recent-post__publish-date">9/25/2015</span>      
                     </div>                    
                 </div>
-                <div class="main__fourth-recent-post main__fourth-recent-post_content">
-                    <img src="images/IMAGEfourth-rec.png" alt="">        
+                <div class="fourth-recent-post main__fourth-recent-post">
+                    <img class="fourth-recent-post__image" src="images/IMAGEfourth-rec.png" alt="">        
                     <div>
-                        <span class="main__fourth-recent-post main__fourth-recent-post_title">Through the Mist</span>
-                        <p class="main__fourth-recent-post main__fourth-recent-post_text">Travel makes you see what a tiny place you occupy in the world.</p>
+                        <span class="fourth-recent-post__title">Through the Mist</span>
+                        <p class="fourth-recent-post__text">Travel makes you see what a tiny place you occupy in the world.</p>
                     </div>
                     <div>
-                        <img src="images/William-Wong.jpg" alt="">
-                        <span class="main__fourth-recent-post main__fourth-recent-post_author">William Wong</span>
-                        <span class="main__fourth-recent-post main__fourth-recent-post_publish-date">9/25/2015</span>      
+                        <img class="fourth-recent-post__author-image" src="images/William-Wong.jpg" alt="">
+                        <span class="fourth-recent-post__author">William Wong</span>
+                        <span class="fourth-recent-post__publish-date">9/25/2015</span>      
                     </div>         
                 </div>
-                <div class="main__fifth-recent-post main__fifth-recent-post_content">
-                    <img src="images/IMAGEfifth-rec.png" alt="">
+                <div class="fifth-recent-post main__fifth-recent-post">
+                    <img class="fifth-recent-post__image" src="images/IMAGEfifth-rec.png" alt="">
                     <div>
-                        <span class="main__fifth-recent-post main__fifth-recent-post_title">Awaken Early</span>
-                        <p class="main__fifth-recent-post main__fifth-recent-post_text">Not all those who wander are lost.</p>
+                        <span class="fifth-recent-post__title">Awaken Early</span>
+                        <p class="fifth-recent-post__text">Not all those who wander are lost.</p>
                     </div>
                     <div>
-                        <img src="images/Mat-Vogels.jpg" alt="">
-                        <span class="main__fifth-recent-post main__fifth-recent-post_author">Mat Vogels</span>
-                        <span class="main__fifth-recent-post main__fifth-recent-post_publish-date">9/25/2015</span> 
+                        <img class="fifth-recent-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <span class="fifth-recent-post__author">Mat Vogels</span>
+                        <span class="fifth-recent-post__publish-date">9/25/2015</span> 
                     </div>
                 </div>
-                <div class="main__sixth-recent-post main__sixth-recent-post_content">
-                    <img src="images/IMAGEsixth-rec.png" alt="">
+                <div class="sixth-recent-post main__sixth-recent-post">
+                    <img class="sixth-recent-post__image" src="images/IMAGEsixth-rec.png" alt="">
                     <div>
-                        <span class="main__sixth-recent-post main__sixth-recent-post_title">Try it Always</span>
-                        <p class="main__sixth-recent-post main__sixth-recent-post_text">The world is a book, and those who do not travel read only one page.</p>
+                        <span class="sixth-recent-post__title">Try it Always</span>
+                        <p class="sixth-recent-post__text">The world is a book, and those who do not travel read only one page.</p>
                     </div>
                     <div>
-                        <img src="images/Mat-Vogels.jpg" alt="">
-                        <span class="main__sixth-recent-post main__sixth-recent-post_author">Mat Vogels</span>
-                        <span class="main__sixth-recent-post main__sixth-recent-post_publish-date">9/25/2015</span>   
+                        <img class="sixth-recent-post__author-image" src="images/Mat-Vogels.jpg" alt="">
+                        <span class="sixth-recent-post__author">Mat Vogels</span>
+                        <span class="sixth-recent-post__publish-date">9/25/2015</span>   
                     </div>                 
                 </div>
             </div>
@@ -135,11 +135,11 @@
     </main>
     <footer class="footer">
         <span class="footer__title">Escape.</span>
-        <nav class="footer__links">
-            <a class="footer__links footer__links_link" href="#">HOME</a>
-            <a class="footer__links footer__links_link" href="#">CATEGORIES</a>
-            <a class="footer__links footer__links_link" href="#">ABOUT</a>
-            <a class="footer__links footer__links_link" href="#">CONTACT</a>
+        <nav class="nav footer__nav footer__nav_grey-color">
+            <a class="nav__link nav__link_size" href="#">HOME</a>
+            <a class="nav__link nav__link_size" href="#">CATEGORIES</a>
+            <a class="nav__link nav__link_size" href="#">ABOUT</a>
+            <a class="nav__link nav__link_size" href="#">CONTACT</a>
         </nav>
     </footer>
 </body>
