--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="first-featured-post featured-posts__first-featured-post">
                     <span class="first-featured-post__title">The Road Ahead</span>
                     <p class="first-featured-post__text">The road ahead might be paved - it might not be.</p>
-                    <div>
+                    <div class="featured-posts__post-footer">
                         <img class="first-featured-post__author-image" src="images/Mat-Vogels.jpg" alt="">
                         <span class="first-featured-post__author">Mat Vogels</span>
                         <span class="first-featured-post__publish-date">September 25, 2015</span>
@@ -47,9 +47,9 @@
                     </div>
                     <span class="second-featured-post__title">From Top Down</span>
                     <p class="second-featured-post__text">Once a year, go someplace youve never been before.</p>
-                    <div>
+                    <div class="featured-posts__post-footer">
                         <img class="second-featured-post__author-image" src="images/William-Wong.jpg" alt="">
-                        <span class="second-featured-post__author">William Wong</span>
+                        <span class="second-featured-post__author second-featured-post__author_resize">William Wong</span>
                         <span class="second-featured-post__publish-date">September 25, 2015</span>     
                     </div>
                 </div>       
