--- a/pages/index.html
+++ b/pages/index.html
@@ -37,9 +37,9 @@
                         <span class="post-title first-featured-post__title">{{ .Title }}</span>
                         <p class="post-text post-text_sizefirst-featured-post__text">{{ .Subtitle }}</p>
                         <div>
-                            <img class="first-featured-post__author-image" src="../static/img/Mat-Vogels.jpg" alt="">
-                            <span class="post-author first-featured-post__author">Mat Vogels</span>
-                            <span class="post-date first-featured-post__publish-date">September 25, 2015</span>
+                            <img class="first-featured-post__author-image" src="" alt="">
+                            <span class="post-author first-featured-post__author"></span>
+                            <span class="post-date first-featured-post__publish-date"></span>
                         </div>
                     </div>
                     <div class="second-featured-post featured-posts__second-featured-post">
@@ -49,9 +49,9 @@
                         <span class="post-title second-featured-post__title">{{ .Title }}</span>
                         <p class="post-text post-text_size second-featured-post__text">{{ .Subtitle }}</p>
                         <div class="featured-posts__post-footer">
-                            <img class="second-featured-post__author-image" src="../static/img/William-Wong.jpg" alt="">
-                            <span class="post-author post-author_size second-featured-post__author second-featured-post__author_resize">William Wong</span>
-                            <span class="post-date second-featured-post__publish-date">September 25, 2015</span>     
+                            <img class="second-featured-post__author-image" src="" alt="">
+                            <span class="post-author post-author_size second-featured-post__author second-featured-post__author_resize"></span>
+                            <span class="post-date second-featured-post__publish-date"></span>     
                         </div>
                     </div>       
                 </div>
